# customer-churn-ibm

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: model_card.md
notebooks/: 01_eda_baselines.ipynb  02_mlp_training.ipynb
src/customer_churn_ibm/: __init__.ipynb  __init__.py  config.py  data.py  gradient_boosting.pkl  model_baseline.py  model_mlp.py  train.py
src/customer_churn_ibm/api/: __init__.py  main.py  schemas.py
src/customer_churn_ibm/mlruns/0/: meta.yaml
src/customer_churn_ibm/mlruns/931733610668822056/: meta.yaml
src/customer_churn_ibm/mlruns/931733610668822056/1cd6b1ff3c2d419fa7571eff8fc9e41f/: meta.yaml
src/customer_churn_ibm/mlruns/931733610668822056/2104bbcb188445508fe2b62567772c90/: meta.yaml
src/customer_churn_ibm/mlruns/931733610668822056/27ff998bac4947c993d57473d0212144/: meta.yaml
src/customer_churn_ibm/mlruns/931733610668822056/36abbe1b5db047b7bc203000f2039b5b/: meta.yaml
src/customer_churn_ibm/mlruns/931733610668822056/3c74564112e345f7b074de64a8cd6407/: meta.yaml
src/customer_churn_ibm/mlruns/931733610668822056/420ae480534c4dabb270b2316e260ff9/: meta.yaml
src/customer_churn_ibm/mlruns/931733610668822056/438b123fe8274061a3c2e6f726ec1f2d/: meta.yaml
src/customer_churn_ibm/mlruns/931733610668822056/4a6a59f002f9470ea09065fb3c5232d5/: meta.yaml
src/customer_churn_ibm/mlruns/931733610668822056/4eb80575a6f949f68b92dbb5a7a1ae5b/: meta.yaml
src/customer_churn_ibm/mlruns/931733610668822056/5844b68dbd0243289d9c44c3485f2a78/: meta.yaml
src/customer_churn_ibm/mlruns/931733610668822056/601b1221b3584d41a92c6817339803ea/: meta.yaml
src/customer_churn_ibm/mlruns/931733610668822056/6958fe5171f944ff8fcb53730909dcf9/: meta.yaml
src/customer_churn_ibm/mlruns/931733610668822056/6ca58b7f4b774dd38f5e42d476216df1/: meta.yaml
src/customer_churn_ibm/mlruns/931733610668822056/7451b3ee43cd499fae5289b4370618b6/: meta.yaml
src/customer_churn_ibm/mlruns/931733610668822056/75778a54a4e24613af922e942410b8cb/: meta.yaml
src/customer_churn_ibm/mlruns/931733610668822056/870b7206bf364aa986d8c5f21db46d3e/: meta.yaml
src/customer_churn_ibm/mlruns/931733610668822056/8e0a32cfe02f44d5bc488d9a219df7d4/: meta.yaml
tests/: test_api.py  test_schema.py  test_smoke.py
(+121 files in other folders)
