[project]
name = "customer-churn-ibm"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.0,<3.0.0)",
    "scipy (>=1.12.0,<1.14.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "kagglehub (>=1.0.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "mlflow (>=2.10.0,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "customer_churn_ibm", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
