[project]
name = "customer-churn-ibm"
version = "0.1.0"
description = "Rede Neural para Previsão de Churn — FIAP PDS Tech Challenge Fase 1"
authors = [
    {name = "Victor Longchamps", email = "victor.longchamps@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas>=2.2.0,<3.0.0",
    "scipy>=1.12.0,<2.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "matplotlib>=3.8.0",
    "kagglehub>=1.0.1,<2.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "numpy>=1.26.0,<3.0.0",
    "mlflow>=2.10.0,<3.0.0",
    "scikit-learn>=1.4.0,<2.0.0",
    "torch>=2.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pandera>=0.19.0",
    "joblib>=1.3.0",
    "pydantic>=2.0.0",
    "httpx2>=0.28.0",
]

[tool.poetry]
packages = [{include = "customer_churn_ibm", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel>=6.0.0",
    "ruff>=0.4.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N803", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["customer_churn_ibm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
